# cpp-20-2025-10-15

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile
_exercises/ex-compare/: comparisons.cpp
_exercises/ex-concepts/: concepts_and_constraints.cpp
_exercises/ex-ranges/: ranges.cpp
_solutions/ex-compare/: comparisons.cpp
_solutions/ex-concepts/: concepts_and_constraints.cpp
compare/: comparisons.cpp  integer_comparisons.cpp
compile-time-programming/: compile_time_programming.cpp
concepts/: concept_subsumation.cpp  concepts_and_constraints.cpp
core-features/: core_features.cpp
coroutines/: coroutines.cpp
coroutines-stdexec/: CMakeLists.txt  coroutines.cpp
helpers/: random.hpp
modules/: CMakeLists.txt
modules/.devcontainer/: Dockerfile.alt  devcontainer.json
modules/drawing-app/: CMakeLists.txt  DrawingApp.cpp  Factory.cxx  Shape-Factory.cxx  Shapes-Point.cxx  Shapes-Rectangle.cxx  Singleton.cxx
modules/import-std/drawing-app/: CMakeLists.txt  DrawingApp.cpp  Factory.cxx  Shapes-Base.cxx  Shapes-Point.cxx  Shapes-Rectangle.cxx  Shapes-Square.cxx  Shapes.cxx
modules/import-std/import-std-lib/: CMakeLists.txt  main.cpp
modules/import-std/modules-4/: CMakeLists.txt  fibonacci_seq.cxx  math.cxx  math_main.cpp  primes.cxx
modules/modules-1/: CMakeLists.txt  primes.cxx  primes_main.cpp
modules/modules-2/: CMakeLists.txt  primes.cpp  primes.cxx  primes_main.cpp
modules/modules-3/: CMakeLists.txt  fibonacci_seq.cxx  math_main.cpp  primes.cxx
ranges/: ranges_and_views.cpp
stdlib-features/: std_lib_cpp20.cpp
templates/: templates.cpp
